<resources>
    <string name="app_name">Donect</string>
    <string name="tag_line">Reach blood donors around you</string>
    <string name="title_activity_home">Map</string>
    <string name="register_donor">Register donor</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Mobile number</string>
    <string name="blood_group">Blood group</string>
    <string name="dob">Date of birth</string>
    <string name="set_dob">Touch to set d.o.b</string>
    <string name="age">Age:</string>
    <string name="location">Location</string>
    <string name="register">Register</string>
    <string name="select_location">Choose</string>
    <string name="cancel">Cancel</string>
</resources>
