<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:minHeight="50dp"
        android:background="@color/colorPrimary"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/heart"
                android:tint="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/reg_fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:inputType="text"
                android:layout_gravity="center_horizontal"
                android:shadowColor="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/reg_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:inputType="text"
                android:layout_gravity="center_horizontal"
                android:shadowColor="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/reg_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:inputType="phone"
                android:layout_gravity="center_horizontal"
                android:shadowColor="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/phone_number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/dob"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/reg_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/set_dob"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground" />

                <TextView
                    android:id="@+id/reg_age"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/age"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/blood_group"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:id="@+id/blood_group_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/reg_btn"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
